# ums2net

./: CMakeLists.txt  Makefile  README.md
conf/: CMakeLists.txt  ums2net.conf
include/: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  configReader.cc  configReader.h  main.cc  main.h  servantThread.cc  servantThread.h  ums2netconfrecord.cc  ums2netconfrecord.h
src/test/: CMakeLists.txt  testUMS2NET-ConfRecord.cc  testUMS2NET-ConfigReader.cc
